# sira-dagster-code-location

./: .env.example  .gitignore  Dockerfile  Dockerfile-v1  LICENSE  README.md  commands.md  docker-bake.hcl  docker-compose-dev.yml  docker-compose-multi.yml  docker-compose-single.yml  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: docker-build.yml  test.yml
code_location_01/: .env.template  .gitignore  Dockerfile  docker-compose.yml  requirements.txt  requirements.txt.bak
code_location_01/config/: pipeline_config.yml
code_location_01/pipelines/default/: Dockerfile  __init__.py  docker-compose.yml
code_location_01/pipelines/default/assets/: asset_default.py
code_location_01/pipelines/default/job/: etl_pipeline.py
code_location_01/scripts/: README.md  create_pipeline.py  create_pipeline.sh  manage_pipeline.py
code_location_01/template/: __init__.py  docker-compose.yml
code_location_01/template/job/: etl_pipeline.py
code_location_02/: Dockerfile  __init__.py  docker-compose.yml
code_location_02/assets/: asset_x.py
code_location_02/job/: etl_pipeline.py
code_location_03/: __init__.py
code_location_03/assets/: asset_y.py
code_location_03/job/: etl_pipeline.py
scripts/: migrate_to_uv.sh  update_lock.sh
sira_data_ingester_v2/: __init__.py
tests/: test_container.py
