[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
    # Core Dagster dependencies
    "dagster>=1.10.0",
    "dagster-webserver>=1.10.0",
    "dagster-docker>=0.26.0",
    "dagster-postgres>=0.26.0",
    "dagster-aws>=0.26.0",
    "dagster-shell>=0.26.0",
    "dagster-dlt==0.26.0",
    "dagster-dbt>=0.26.0",
    "dagster-duckdb>=0.26.0",
    "dagster-pyspark>=0.26.0",
    # Utility dependencies
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.6",
    "pyspark>=3.5.4",
    # Database and storage dependencies
    "dlt>=1.6.1",
    "clickhouse-connect>=0.8.15",
    "dlt[clickhouse,parquet,postgres,filesystem,duckdb]>=1.6.1",
    "pyarrow>=12.0.0,<18.0.0",
    "sqlalchemy~=2.0.38",
    "s3fs>=2025.2.0",
    # Data processing dependencies
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "smart_open>=7.1.0",
    "smart_open[s3]>=7.1.0",
    "boto3>=1.36.1",
    # Utility dependencies
    "requests>=2.32.3",
    "PyYAML>=6.0.2",
    # Dagster Universe dependencies
    "geopandas>=1.0.1",
    "kaleido>=1.0.0rc0",
    "plotly>=6.0.0",
    "shapely>=2.0.7",
    # Development dependencies (commented out)
    "scrapy>=2.11.0",
    # "pytest>=7.0.0",
    # "docker>=6.0.0",
    "psutil>=7.0.0",
    "lz4>=4.4.3",
]
name = "dagster-sira-code-location"
version = "1.0.0"
description = "Production-ready Docker deployment setup for Dagster Code Locations"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    # Development dependencies here
    "pytest>=7.4.3",
    # ... other dev dependencies ...
]

[tool.dagster]
module_name = "dagster-sira-code-location"
code_location_name = "dagster-sira-code-location"

[tool.black]
line-length = 150
preview = true
# target-version = ['py312']
[tool.ruff]
line-length = 150
target-version = "py312"
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]

[tool.ruff.lint]
extend-ignore = [
    "F401",   # Unused import - We stub some files with just imports
    "I001",   # Import block sorting - We prefer imports in order of use
    "TID252", # Relative imports are acceptable in examples & docs
    "E501",   # Line length - We're using Black's line length instead
]

[tool.isort]
profile = "black"
line_length = 150
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
force-multiline = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
# asyncio_mode = "auto"
[tool.pyright]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
exclude = [".venv", ".env", "venv", "env"]

[tool.pylance]
python.analysis.typeCheckingMode = "basic"

[tool.hatch.build.targets.wheel]
packages = ["sira_data_ingester_v2"]
